# risk_analytics

./: CHANGELOG.md  README.md  TODO.md  demo.py  pyproject.toml
docs/: xva.md
docs/designs/: risk-analytics-v1.md
examples/: multi_asset.yaml  single_swap.yaml  stress_test.yaml
src/pyxva/core/: engine.py
src/pyxva/exposure/: bilateral.py  hazard_curve.py
src/pyxva/exposure/streaming/: engine.py
src/pyxva/pricing/equity/: vanilla_option.py
src/risk_analytics/: __init__.py
src/risk_analytics/core/: __init__.py  base.py  engine.py  grid.py  market_data.py  paths.py  stateful.py  yield_curve.py
src/risk_analytics/exposure/: __init__.py  bilateral.py  collateral.py  csa.py  metrics.py  netting.py  saccr.py
src/risk_analytics/exposure/margin/: __init__.py  im.py  simm.py  vm.py
src/risk_analytics/exposure/streaming/: vm_stepper.py
src/risk_analytics/models/: __init__.py
src/risk_analytics/models/commodity/: __init__.py  schwartz1f.py  schwartz2f.py
src/risk_analytics/models/equity/: __init__.py  gbm.py  heston.py
src/risk_analytics/models/fx/: garman_kohlhagen.py
src/risk_analytics/models/rates/: __init__.py  hull_white.py  hull_white2f.py
src/risk_analytics/pipeline/: __init__.py  config.py  engine.py  result.py  shared_memory.py
src/risk_analytics/pricing/: __init__.py  base.py
src/risk_analytics/pricing/equity/: __init__.py  vanilla_option.py
src/risk_analytics/pricing/exotic/: __init__.py  asian_option.py  barrier_option.py
src/risk_analytics/pricing/rates/: __init__.py  bond.py  swap.py
tests/: test_bilateral.py  test_exposure.py  test_market_data.py  test_models.py  test_paths_interpolation.py  test_pipeline.py  test_price_at.py  test_pricing.py  test_serialization.py  test_shared_memory.py  test_stateful.py  test_streaming_exposure.py  test_yield_curve.py
