[project]
name = "risk-analytics"
version = "1.0.0"
description = "Monte Carlo XVA library for counterparty credit risk analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "pyyaml>=6.0",
]

[project.scripts]
risk-analytics-demo = "risk_analytics.demo:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
